# rust-protobuf

./: notes.org
perftest/bytes/src/: messages.rs
perftest/vs-cxx/: perftest_data.rs
protobuf/: Cargo.toml
protobuf-codegen/: Cargo.toml
protobuf-codegen-pure/: Cargo.toml
protobuf-codegen-pure/src/: convert.rs
protobuf-codegen/src/: enums.rs  extensions.rs  field.rs  lib.rs  message.rs  oneof.rs  rust_types_values.rs
protobuf-test-common/src/: test.rs
protobuf-test/src/common/v2/: test_basic.rs  test_enum_alias.rs  test_enum_values.rs  test_ext.rs  test_nonunique_enum.rs  test_offsets.rs  test_offsets_pb.proto  test_text_format.rs
protobuf-test/src/v2/: test_default_values.rs
protobuf-test/src/v3/: test_zeros_are_not_written.rs
protobuf/src/: atomic_flags.rs  buf_read_iter.rs  compiler_plugin.rs  core.rs  descriptor.rs  descriptorx.rs  lib.rs  plugin.rs  rt.rs  rustproto.rs  stream.rs  types.rs
protobuf/src/reflect/: mod.rs
protobuf/src/well_known_types/: any.rs  api.rs  duration.rs  empty.rs  field_mask.rs  source_context.rs  struct_pb.rs  timestamp.rs  type_pb.rs  wrappers.rs
protoc/: Cargo.toml
protoc-rust/: Cargo.toml
