[package]
name = "protobuf-codegen"
version = "2.8.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]

[dependencies.protobuf]
path = "../protobuf"

[[bin]]

name = "protoc-gen-rust"
path = "src/bin/protoc-gen-rust.rs"
test = false

[[bin]]

name = "protobuf-bin-gen-rust-do-not-use"
path = "src/bin/protobuf-bin-gen-rust-do-not-use.rs"
test = false

